attempt to fix windows encoding on github actions